# invenio-ldapclient

./: .gitignore  MANIFEST.in  config_locations.py  pyproject.toml  rdm-venv-requirements.txt  requirements.txt  setup.py  venv-rdm-requirements.txt
.venv-rdm/: pyvenv.cfg
archive/: setup.py  test_examples_app.py  test_invenio_ldapclient.py
docs/: conf.py  minimal_app.rst
docs/diagrams/: register_or_update_user.drawio
invenio_ldapclient/: config.py  ext.py  forms.py  views.py  views_rest.py
invenio_ldapclient/django/utils/: regex_helper.py
scripts/: add_groups.py  add_users.py  build_dit.py  finally.py
scripts/dev/: rest_POST.py
src/integration_test/: setup.sh  tear_down.sh  tests.sh
src/integration_test/instance/: config.py
src/invenio_ldapclient/: .#views.py  __init__.py  config.py  db.py  dependency_inversion.py  dit.py  ext.py  forms.py  rest_request_object.py  utils.py  views.py  views_rest.py
src/invenio_ldapclient/django/: __init__.py
src/invenio_ldapclient/django/utils/: http.py
src/invenio_ldapclient/templates/invenio_ldapclient/: login_user.html
src/invenio_ldapclient/templates/invenio_ldapclient/invenio_accounts/: base_cover.html
src/minimal/: __init__.py  config.py
src/minimal_rest/: __init__.py
src/tests/: add_users.py  build_dit_integ.py  conftest.py  final.py  test_invenio_ldapclient.py  test_login_form.py  test_view.py
src/tests/integration_test/: setup.sh  tear_down.sh
src/tests/integration_test/instance/: config.py
src/tests/resources/: mock_ldap_server.json  mock_ldap_server_schema.json
src/tests/test_ldap_directory/: __init__.py  add_groups.py  add_org_units.py  add_users.py  final.py
src/unittests/: conftest.py  test_dit.py  test_ext_ldap_excl_auth.py  test_ext_ldap_non_excl_auth.py  test_login_form.py  test_rest_view.py  test_view.py
tests/: conftest.py  test_examples_app.py  test_invenio_ldapclient.py  test_login_rest.py  test_v2.py
