[project]
name = "invenio-ldapclient"
dynamic = ["version"]
license = {file = "LICENSE"}
authors = [
  {name = "Galter Health Sciences Library & Learning Center", email = "galter-is@listserv.it.northwestern.edu"}
]
dependencies = [
	     "Flask-BabelEx >= 0.9.2",
	     "invenio-accounts >= 4.0.0,<5",
	     "invenio-db >= 1.0.2",
	     "invenio-userprofiles == 1.0.1",
	     "ldap3 >=2.5.0,<3.0.0",
	     "django >=5.0.0,<6"
	     ]
classifiers=[
        'Environment :: Web Environment',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Programming Language :: Python :: 2',
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.5',
        'Development Status :: 1 - Planning',
    ]

[project.optional-dependencies]
test = ["pytest"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["invenio_ldapclient"]

[tool.setuptools.dynamic]
version = {attr = "invenio_ldapclient.__version__"}
#AttributeError: invenio_ldapclient has no attribute __version__
